// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /transform positive should return cleanups 1`] = `
{
  "cleanedDaycareGroups": [
    {
      "daycare_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "effica_id": 1251,
      "end_date": null,
      "id": Any<String>,
      "name": "Tujun tupajumit",
      "start_date": "2020-03-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`GET /transform positive should return transformed application 1`] = `
{
  "applicationForms": [
    {
      "application_id": Any<String>,
      "effica_application_id": 12345,
      "effica_childminder_id": null,
      "effica_priority": 1,
      "effica_unit_id": 123,
      "preferred_start_date": "2021-09-01T00:00:00.000Z",
      "service_need_option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "application_id": Any<String>,
      "effica_application_id": 12345,
      "effica_childminder_id": null,
      "effica_priority": 2,
      "effica_unit_id": 0,
      "preferred_start_date": "2021-09-01T00:00:00.000Z",
      "service_need_option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "unit_id": "cecdf326-0a56-11ec-90a9-e73454a1ee1a",
    },
  ],
  "applicationFormsTodo": [],
  "applications": [
    {
      "child_id": Any<String>,
      "duedate": "2025-11-29T00:00:00.000Z",
      "effica_guid": "12F28AA0-E059-4203-98F9-EE3D37738B99",
      "effica_id": 12345,
      "guardian_id": Any<String>,
      "id": Any<String>,
      "sentdate": "2025-08-01T00:00:00.000Z",
      "status": "SENT",
      "transferapplication": false,
      "type": "DAYCARE",
    },
    {
      "child_id": Any<String>,
      "duedate": null,
      "effica_guid": "12F28AA0-E059-4203-98F9-EE3D37738B00",
      "effica_id": 12346,
      "guardian_id": Any<String>,
      "id": Any<String>,
      "sentdate": "2020-04-01T00:00:00.000Z",
      "status": "SENT",
      "transferapplication": false,
      "type": "DAYCARE",
    },
  ],
  "applicationsTodo": [],
}
`;

exports[`GET /transform positive should return transformed daily journals 1`] = `
{
  "absences": [
    {
      "absence_type": "SICKLEAVE",
      "category": "BILLABLE",
      "child_id": Any<String>,
      "date": "2020-03-09T00:00:00.000Z",
      "effica_dailyjournalids": [
        123456,
      ],
      "id": Any<String>,
    },
  ],
  "absencesTodo": [
    {
      "absence_type": null,
      "category": "BILLABLE",
      "child_id": Any<String>,
      "date": "2020-03-24T00:00:00.000Z",
      "effica_dailyjournalids": [
        123456,
      ],
      "id": Any<String>,
      "reason": "TYPE MISSING",
    },
  ],
  "backupCares": [
    {
      "child_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_unit_id": 123,
      "end_date": "2020-03-17T00:00:00.000Z",
      "group_id": Any<String>,
      "id": Any<String>,
      "start_date": "2020-03-15T00:00:00.000Z",
      "unit_id": Any<String>,
    },
    {
      "child_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_unit_id": 123,
      "end_date": "2020-03-19T00:00:00.000Z",
      "group_id": Any<String>,
      "id": Any<String>,
      "start_date": "2020-03-19T00:00:00.000Z",
      "unit_id": Any<String>,
    },
  ],
  "backupCaresTodo": [],
}
`;

exports[`GET /transform positive should return transformed departments 1`] = `
[
  {
    "daycare_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    "effica_id": 1231,
    "end_date": null,
    "id": Any<String>,
    "name": "Tenhon terhot",
    "start_date": Any<String>,
  },
  {
    "daycare_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    "effica_id": 1251,
    "end_date": null,
    "id": Any<String>,
    "name": "Tujun tupajumit",
    "start_date": Any<String>,
  },
]
`;

exports[`GET /transform positive should return transformed families 1`] = `
{
  "child": [
    {
      "child_id": Any<String>,
      "child_ssn": "251118A9509",
      "end_date": "2020-11-30T00:00:00.000Z",
      "family_number": 1,
      "head_of_family": Any<String>,
      "hof_ssn": "020967-9992",
      "id": Any<String>,
      "start_date": Any<String>,
    },
    {
      "child_id": Any<String>,
      "child_ssn": "010619A9501",
      "end_date": "2037-05-31T00:00:00.000Z",
      "family_number": 2,
      "head_of_family": Any<String>,
      "hof_ssn": "020967-9992",
      "id": Any<String>,
      "start_date": Any<String>,
    },
    {
      "child_id": Any<String>,
      "child_ssn": "251118A9509",
      "end_date": "2036-11-24T00:00:00.000Z",
      "family_number": 2,
      "head_of_family": Any<String>,
      "hof_ssn": "020967-9992",
      "id": Any<String>,
      "start_date": Any<String>,
    },
  ],
  "partner": [
    {
      "effica_ssn": "020967-9992",
      "end_date": "2020-11-30T00:00:00.000Z",
      "family_number": 1,
      "indx": 1,
      "other_indx": 2,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": Any<String>,
    },
    {
      "effica_ssn": "180476-998M",
      "end_date": "2020-11-30T00:00:00.000Z",
      "family_number": 1,
      "indx": 2,
      "other_indx": 1,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": Any<String>,
    },
    {
      "effica_ssn": "020967-9992",
      "end_date": null,
      "family_number": 2,
      "indx": 1,
      "other_indx": 2,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": Any<String>,
    },
    {
      "effica_ssn": "180476-998M",
      "end_date": null,
      "family_number": 2,
      "indx": 2,
      "other_indx": 1,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": Any<String>,
    },
  ],
}
`;

exports[`GET /transform positive should return transformed feedeviations 1`] = `
[
  {
    "amount": 10,
    "effica_placement_nbr": 12,
    "effica_row_nbr": 2,
    "id": Any<String>,
    "is_absolute": true,
    "notes": "ALENNUS AP/IP",
    "person_id": Any<String>,
    "type": "DISCOUNT",
    "valid_from": "2020-03-01T00:00:00.000Z",
    "valid_to": null,
  },
]
`;

exports[`GET /transform positive should return transformed income 1`] = `
[
  {
    "application_id": null,
    "data": {
      "DAILY_ALLOWANCE": {
        "amount": 1000,
        "coefficient": "DAILY_ALLOWANCE_21_5",
      },
      "MAIN_INCOME": {
        "amount": 450060,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
      "OTHER_INCOME": {
        "amount": 56000,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
      "PAID_ALIMONY": {
        "amount": 21500,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
    },
    "effect": "INCOME",
    "id": Any<String>,
    "income_total": 506060,
    "is_entrepreneur": false,
    "notes": "",
    "person_id": Any<String>,
    "person_ssn": "020967-9992",
    "valid_from": Any<String>,
    "valid_to": null,
  },
  {
    "application_id": null,
    "data": {
      "MAIN_INCOME": {
        "amount": 5000000,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
    },
    "effect": "INCOME",
    "id": Any<String>,
    "income_total": 5000000,
    "is_entrepreneur": false,
    "notes": "",
    "person_id": Any<String>,
    "person_ssn": "180476-998M",
    "valid_from": Any<String>,
    "valid_to": Any<String>,
  },
]
`;

exports[`GET /transform positive should return transformed pay decisions 1`] = `
{
  "feeDecisionChildren": [
    {
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": null,
      "effica_internal_decision_number": 3843781,
      "effica_paydecisionrows_guid": null,
      "effica_ssn": "010619A9501",
      "fee_and_deviations": [
        -100,
        -288,
        492,
      ],
      "fee_decision_id": Any<String>,
      "id": Any<String>,
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "sibling_discount": 0,
    },
    {
      "child_date_of_birth": "2015-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "effica_internal_decision_number": 3843785,
      "effica_paydecisionrows_guid": null,
      "effica_ssn": "251115A9509",
      "fee_and_deviations": [
        0,
      ],
      "fee_decision_id": Any<String>,
      "id": Any<String>,
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "sibling_discount": 0,
    },
    {
      "child_date_of_birth": "2014-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "effica_internal_decision_number": 3843786,
      "effica_paydecisionrows_guid": null,
      "effica_ssn": "251114A9509",
      "fee_and_deviations": [
        0,
      ],
      "fee_decision_id": Any<String>,
      "id": Any<String>,
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_option_id": "503593e8-b961-11eb-b527-a3dcdfb628ec",
      "sibling_discount": 0,
    },
  ],
  "feeDecisionChildrenTodo": [],
  "feeDecisions": [
    {
      "decision_number": "123456795",
      "decision_type": "NORMAL",
      "effica_guid": "paydecision3843786",
      "effica_internal_decision_number": 3843786,
      "effica_ssn": "180475-999M",
      "end_date": "2099-12-31T00:00:00.000Z",
      "family_size": 2,
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 0,
        },
        "effect": "INCOME",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": null,
      "partner_income": null,
      "start_date": "2019-08-01T00:00:00.000Z",
      "status": "SENT",
      "status_group": "SENT",
    },
    {
      "decision_number": "123456790",
      "decision_type": "NORMAL",
      "effica_guid": "paydecision3843781",
      "effica_internal_decision_number": 3843781,
      "effica_ssn": "020967-9992",
      "end_date": "2099-12-31T00:00:00.000Z",
      "family_size": 2,
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 10020,
        },
        "effect": "INCOME",
        "total": 10020,
        "totalExpenses": 0,
        "totalIncome": 10020,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": Any<String>,
      "partner_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "start_date": "2020-03-01T00:00:00.000Z",
      "status": "SENT",
      "status_group": "SENT",
    },
    {
      "decision_number": "123456794",
      "decision_type": "NORMAL",
      "effica_guid": "paydecision3843785",
      "effica_internal_decision_number": 3843785,
      "effica_ssn": "180476-999M",
      "end_date": "2099-12-31T00:00:00.000Z",
      "family_size": 2,
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 0,
        },
        "effect": "INCOME",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": null,
      "partner_income": null,
      "start_date": "2020-08-03T00:00:00.000Z",
      "status": "SENT",
      "status_group": "SENT",
    },
  ],
  "feeDecisionsTodo": [
    {
      "decision_number": "123456793",
      "decision_type": "NORMAL",
      "effica_guid": "paydecision3843784",
      "effica_internal_decision_number": 3843784,
      "effica_ssn": "180476-999M",
      "end_date": "2020-08-01T00:00:00.000Z",
      "family_size": 2,
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": null,
      "partner_income": null,
      "reason": "START AFTER END",
      "start_date": "2020-08-02T00:00:00.000Z",
      "status": "SENT",
      "status_group": "SENT",
    },
  ],
}
`;

exports[`GET /transform positive should return transformed pedagogical documents 1`] = `
{
  "data": [
    {
      "attachment_id": Any<String>,
      "child_id": Any<String>,
      "content_type": "application/pdf",
      "created": "2022-02-14T00:00:00.000Z",
      "description": "Varhaiskasvatussuunnitelma Testi 2021-2022",
      "id": Any<String>,
      "name": "1212_Varhaiskasvatussuunnitelma_Christian Child_2021-08-01 - 2022-07-31.pdf",
      "updated": "2022-02-14T00:00:00.000Z",
      "uploaded_to_s3": false,
    },
    {
      "attachment_id": Any<String>,
      "child_id": Any<String>,
      "content_type": "application/pdf",
      "created": "2022-02-14T00:00:00.000Z",
      "description": "Varhaiskasvatussuunnitelma Testi 2021-2022",
      "id": Any<String>,
      "name": "9035_Varhaiskasvatussuunnitelma_Camilla Child_2021-08-01 - 2022-07-31.pdf",
      "updated": "2022-02-14T00:00:00.000Z",
      "uploaded_to_s3": false,
    },
  ],
  "todo": [],
}
`;

exports[`GET /transform positive should return transformed persons 1`] = `
[
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa1}",
    "effica_ssn": "020967-9992",
    "email": "fake@notmaildomain.notext",
    "first_name": "Aimo",
    "id": Any<String>,
    "language": "fi",
    "last_name": "Authentic",
    "nationalities": [],
    "phone": "000-0000000",
    "post_office": "Ypäjä",
    "postal_code": "00001",
    "restricted_details_enabled": false,
    "social_security_number": "020967-9992",
    "source_system": "effica",
    "street_address": "Fakestreet 123",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa2}",
    "effica_ssn": "020288-TP01",
    "email": "fake2@notmaildomain.notext",
    "first_name": "Teppo",
    "id": Any<String>,
    "language": "fi",
    "last_name": "Temporary",
    "nationalities": [],
    "phone": "111-1111111",
    "post_office": "Ypäjä",
    "postal_code": "00002",
    "restricted_details_enabled": false,
    "social_security_number": null,
    "source_system": "effica",
    "street_address": "StreetStreet 321",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa3}",
    "effica_ssn": "180476-998M",
    "email": "fake3@notmaildomain.notext",
    "first_name": "Hilda",
    "id": Any<String>,
    "language": "fi",
    "last_name": "Hidden",
    "nationalities": [],
    "phone": "0222222222",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": true,
    "social_security_number": "180476-998M",
    "source_system": "effica",
    "street_address": "",
  },
  {
    "backup_phone": "222-2222223",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa4}",
    "effica_ssn": "010619A9501",
    "email": "fake3@notmaildomain.notext",
    "first_name": "Christian",
    "id": Any<String>,
    "language": "fi",
    "last_name": "Child",
    "nationalities": [],
    "phone": "222-2222222",
    "post_office": "Ypäjä",
    "postal_code": "00001",
    "restricted_details_enabled": false,
    "social_security_number": "010619A9501",
    "source_system": "effica",
    "street_address": "HideStreet 2",
  },
  {
    "backup_phone": "222-2222223",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa5}",
    "effica_ssn": "251118A9509",
    "email": "fake3@notmaildomain.notext",
    "first_name": "Camilla",
    "id": Any<String>,
    "language": "fi",
    "last_name": "Child",
    "nationalities": [],
    "phone": "222-2222222",
    "post_office": "Tenhola",
    "postal_code": "12000",
    "restricted_details_enabled": false,
    "social_security_number": "251118A9509",
    "source_system": "effica",
    "street_address": "HideStreet 2",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa6}",
    "effica_ssn": "181101A9092",
    "email": null,
    "first_name": "",
    "id": Any<String>,
    "language": "fi",
    "last_name": "",
    "nationalities": [],
    "phone": "",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": false,
    "social_security_number": "181101A9092",
    "source_system": "effica",
    "street_address": "",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa7}",
    "effica_ssn": "251115A9509",
    "email": null,
    "first_name": "",
    "id": Any<String>,
    "language": "fi",
    "last_name": "",
    "nationalities": [],
    "phone": "",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": false,
    "social_security_number": "251115A9509",
    "source_system": "effica",
    "street_address": "",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa8}",
    "effica_ssn": "180476-999M",
    "email": null,
    "first_name": "",
    "id": Any<String>,
    "language": "fi",
    "last_name": "",
    "nationalities": [],
    "phone": "",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": false,
    "social_security_number": "180476-999M",
    "source_system": "effica",
    "street_address": "",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa9}",
    "effica_ssn": "180475-999M",
    "email": null,
    "first_name": "",
    "id": Any<String>,
    "language": "fi",
    "last_name": "",
    "nationalities": [],
    "phone": "",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": false,
    "social_security_number": "180475-999M",
    "source_system": "effica",
    "street_address": "",
  },
  {
    "backup_phone": "",
    "date_of_birth": Any<String>,
    "effica_guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa10}",
    "effica_ssn": "251114A9509",
    "email": null,
    "first_name": "",
    "id": Any<String>,
    "language": "fi",
    "last_name": "",
    "nationalities": [],
    "phone": "",
    "post_office": "",
    "postal_code": "",
    "restricted_details_enabled": false,
    "social_security_number": "251114A9509",
    "source_system": "effica",
    "street_address": "",
  },
]
`;

exports[`GET /transform positive should return transformed placements 1`] = `
{
  "applications": [
    {
      "child_id": Any<String>,
      "duedate": "2025-11-29T00:00:00.000Z",
      "effica_guid": "12F28AA0-E059-4203-98F9-EE3D37738B99",
      "effica_id": 12345,
      "guardian_id": Any<String>,
      "id": Any<String>,
      "sentdate": "2025-08-01T00:00:00.000Z",
      "status": "SENT",
      "transferapplication": false,
      "type": "DAYCARE",
    },
    {
      "child_id": Any<String>,
      "duedate": null,
      "effica_guid": "12F28AA0-E059-4203-98F9-EE3D37738B00",
      "effica_id": 12346,
      "guardian_id": Any<String>,
      "id": Any<String>,
      "sentdate": "2020-04-01T00:00:00.000Z",
      "status": "SENT",
      "transferapplication": false,
      "type": "DAYCARE",
    },
  ],
  "placements": [
    {
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "100",
      "effica_extent_nbr": 111,
      "effica_placement_nbr": 11,
      "effica_ssn": "010619A9501",
      "effica_unit_id": 123,
      "end_date": "2020-08-01T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "start_date": "2020-03-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "101",
      "effica_extent_nbr": 12,
      "effica_placement_nbr": 12,
      "effica_ssn": "010619A9501",
      "effica_unit_id": 123,
      "end_date": "2025-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "start_date": "2021-03-01T00:00:00.000Z",
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": null,
      "effica_childminder_id": "010101-TP99",
      "effica_department_id": null,
      "effica_extent_code": "101",
      "effica_extent_nbr": 131,
      "effica_placement_nbr": 13,
      "effica_ssn": "251118A9509",
      "effica_unit_id": null,
      "end_date": "2020-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "start_date": "2020-03-01T00:00:00.000Z",
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "100",
      "effica_extent_nbr": 18,
      "effica_placement_nbr": 18,
      "effica_ssn": "251118A9509",
      "effica_unit_id": 123,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "start_date": "2019-08-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2015-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "200",
      "effica_extent_nbr": 200,
      "effica_placement_nbr": 20,
      "effica_ssn": "251115A9509",
      "effica_unit_id": 123,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "503593e8-b961-11eb-b527-a3dcdfb628ec",
      "start_date": "2019-08-01T00:00:00.000Z",
      "type": "PRESCHOOL_DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2015-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "100",
      "effica_extent_nbr": 210,
      "effica_placement_nbr": 21,
      "effica_ssn": "251115A9509",
      "effica_unit_id": 123,
      "end_date": "2020-08-02T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "start_date": "2020-08-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2015-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "100",
      "effica_extent_nbr": 220,
      "effica_placement_nbr": 22,
      "effica_ssn": "251115A9509",
      "effica_unit_id": 123,
      "end_date": "2021-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "start_date": "2020-08-03T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2014-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "200",
      "effica_extent_nbr": 230,
      "effica_placement_nbr": 23,
      "effica_ssn": "251114A9509",
      "effica_unit_id": 123,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "503593e8-b961-11eb-b527-a3dcdfb628ec",
      "start_date": "2019-08-01T00:00:00.000Z",
      "type": "PRESCHOOL_DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
  ],
  "placementsTodo": [
    {
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "10000",
      "effica_extent_nbr": 112,
      "effica_placement_nbr": 11,
      "effica_ssn": "010619A9501",
      "effica_unit_id": 123,
      "end_date": "2021-02-28T00:00:00.000Z",
      "id": Any<String>,
      "option_id": null,
      "reason": "PLACEMENTEXTENT MAPPING MISSING",
      "start_date": "2020-08-02T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": null,
      "effica_childminder_id": "010101-TP99",
      "effica_department_id": null,
      "effica_extent_code": "101",
      "effica_extent_nbr": 14,
      "effica_placement_nbr": 14,
      "effica_ssn": "251118A9509",
      "effica_unit_id": null,
      "end_date": "2021-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "reason": "OVERLAPPING PLACEMENT",
      "start_date": "2021-01-01T00:00:00.000Z",
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": null,
      "effica_childminder_id": "010101-TP99",
      "effica_department_id": null,
      "effica_extent_code": "101",
      "effica_extent_nbr": 15,
      "effica_placement_nbr": 15,
      "effica_ssn": "251118A9509",
      "effica_unit_id": null,
      "end_date": "2021-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "reason": "OVERLAPPING PLACEMENT",
      "start_date": "2021-08-01T00:00:00.000Z",
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": null,
      "effica_childminder_id": null,
      "effica_department_id": null,
      "effica_extent_code": "1000",
      "effica_extent_nbr": 17,
      "effica_placement_nbr": 17,
      "effica_ssn": "251118A9509",
      "effica_unit_id": 999,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": null,
      "reason": "UNIT MISSING",
      "start_date": "2019-08-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": null,
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": null,
      "effica_childminder_id": null,
      "effica_department_id": null,
      "effica_extent_code": "1000",
      "effica_extent_nbr": 17,
      "effica_placement_nbr": 17,
      "effica_ssn": "251118A9509",
      "effica_unit_id": 999,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": null,
      "reason": "PLACEMENTEXTENT MAPPING MISSING",
      "start_date": "2019-08-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": null,
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "100",
      "effica_extent_nbr": 191,
      "effica_placement_nbr": 19,
      "effica_ssn": "251118A9509",
      "effica_unit_id": 123,
      "end_date": "2022-01-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": null,
      "reason": "PLACEMENTEXTENT MAPPING MISSING",
      "start_date": "2022-01-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
    {
      "child_date_of_birth": "2018-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "daycare_group_id": Any<String>,
      "effica_childminder_id": null,
      "effica_department_id": 1231,
      "effica_extent_code": "10000",
      "effica_extent_nbr": 192,
      "effica_placement_nbr": 19,
      "effica_ssn": "251118A9509",
      "effica_unit_id": 123,
      "end_date": "2024-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": null,
      "reason": "PLACEMENTEXTENT MAPPING MISSING",
      "start_date": "2022-02-01T00:00:00.000Z",
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    },
  ],
}
`;

exports[`GET /transform positive should return transformed special means 1`] = `
{
  "assistanceActions": [
    {
      "actions": [
        "10",
      ],
      "child_id": Any<String>,
      "effica_ssn": "010619A9501",
      "end_date": "2020-05-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-08T00:00:00.000Z",
    },
  ],
  "assistanceActionsTodo": [],
}
`;

exports[`GET /transform positive should return transformed special needs 1`] = `
{
  "assistanceNeeds": [
    {
      "bases": [
        "DEVELOPMENTAL_DISABILITY",
      ],
      "child_id": Any<String>,
      "effica_ssn": "010619A9501",
      "end_date": "2020-05-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-08T00:00:00.000Z",
    },
  ],
  "assistanceNeedsTodo": [],
}
`;

exports[`GET /transform positive should return transformed timestamps 1`] = `
{
  "childAttendances": [
    {
      "child_id": Any<String>,
      "date": "2021-01-01T00:00:00.000Z",
      "effica_childminder_id": "010101-TP99",
      "effica_placement_number": 13,
      "effica_rownumber": 1122,
      "effica_unit_id": 0,
      "end_time": "16:17:00",
      "id": Any<String>,
      "start_time": "07:26:00",
      "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    },
  ],
  "childAttendancesTodo": [],
}
`;

exports[`GET /transform positive should return transformed voucher value decisions 1`] = `
{
  "decisions": [
    {
      "base_co_payment": 100,
      "capacity_factor": "0.00",
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "co_payment": 100,
      "decision_number": "1",
      "effica_childminder_id": null,
      "effica_decision_date": "2020-12-01T00:00:00.000Z",
      "effica_guid": "10",
      "effica_ssn": "010619A9501",
      "effica_unit_id": 123,
      "family_size": 5,
      "final_co_payment": 100,
      "head_of_family_id": Any<String>,
      "id": Any<String>,
      "partner_id": Any<String>,
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "sibling_discount": 0,
      "status": "SENT",
      "status_group": "APPROVED",
      "valid_from": "2020-04-01T00:00:00.000Z",
      "valid_to": "2099-12-31T00:00:00.000Z",
      "voucher_value": 1000,
    },
  ],
  "decisionsTodo": [],
}
`;
